img stretching fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,6 +144,10 @@
 /* main body */
 
 /* body-color */
+.yrs-studied{
+  font-weight: 300;
+}
+
 
 body {
   color: #333;
